# Supplier-Onboarding-Risk-Agent

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt  supplier_memory_radar.py  web_service.py
data/: late_correction.md  procurement_policy.md  supplier_packet.md  vendor_history.md
docs/: architecture.md  cognee-demo.md  demo-proof.md
docs/examples/: cognee-memory-output.json  orchestrator-output-no-input.json
docs/screenshots/: README.md
public/: app.js  index.html  styles.css
tests/: test_supplier_memory_radar.py
